# churchrm

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/: 001_create_customer.sql
src/: app.rs  lib.rs  main.rs  models.rs  server.rs  state.rs
style/: main.css
