[package]
name = "churchrm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.5" }
leptos_router = { version = "0.8.5" }
leptos_meta = { version = "0.8.5" }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }

axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
dotenvy = { version = "0.15", optional = true }
leptos_axum = { version = "0.8.5", optional = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "migrate"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:dotenvy",
    "dep:sqlx",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "churchrm"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
site-addr = "127.0.0.1:3000"
reload-port = 3001
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
